kubernetes/local/ingress/n8n-ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-clustersvc
  namespace: n8n
  labels:
    service: n8n
spec:
  type: ClusterIP
  selector:
    service: n8n
  ports:
    - name: "n8n-port"
      port: 80
      targetPort: 5678
      protocol: TCP
