kubernetes/local/ingress/n8n-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: n8n
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: traefik
  rules:
    - host: n8n.127-0-0-1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-clustersvc
                port:
                  number: 80
  tls:
    - hosts:
        - n8n.127-0-0-1.sslip.io
    # - host: n8n.127-0-0-1.sslip.io
    #   tls:
    #     cipher_suites:
    #       - TLSv1.2
    #       - TLSv1.3
